[package]
name = "nfcbridge-server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures-channel = "0.3.31"
futures-util = "0.3.31"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0" }

[[bin]]
name = "echo-server"
path = "src/echo-server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
